# MCS_Light_Propagation

./: AbsorbOnly.cpp  AbsorbOnly.h  CMakeLists.txt  MCS_LightPropagation.cbp  MCS_LightPropagation.depend  MCS_LightPropagation.layout  MediaStructure.cpp  MediaStructure.h  Note.txt  README.md  Rand.cpp  Rand.h  main.cpp
Data/: Distr_Out.csv  Grid_Out.csv  Grid_Out.txt  Interval.txt  RT_fixed_weight_Out.txt  RT_variable_weight_Out.txt  RandomNums.txt  Refl_Mismatch_Boundary_Out.txt
src/: AbsorbOnly.cpp  AbsorbOnly.h  MediaStructure.cpp  MediaStructure.h  Mismatch_Bound.cpp  Mismatch_Bound.h  Rand.cpp  Rand.h  Sim_Refl_Trans.cpp  Sim_Refl_Trans.h  Store_grid_info.cpp  Store_grid_info.h  absorb_only.cpp  absorb_only.h  main.cpp  media_structure.cpp  media_structure.h  medium_structure.cpp  medium_structure.h  mismatch_bound.cpp  mismatch_bound.h  multiple_layer.cpp  multiple_layer.h  random_number.cpp  random_number.h  reflection_and_transmission.cpp  reflection_and_transmission.h  store_grid_info.cpp  store_grid_info.h
